2012-09-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/Makefile.am: add EXTRA_DIST, replace $(srcdir) by
	$(builddir) for generated files, so "make distcheck"
	works again

2012-09-05  Rene Liebscher <R.Liebscher@gmx.de>

	* doc/Makefile.am: add $(srcdir) to name of generated files, so BSD make
	                   find the files ( GNU make sees no difference if the 
	                   file is called version.texi or ./version.texi )

2012-08-15  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7184 Support for PICKit2 programmer
	* Makefile.am: add pickit2 files
	* pickit2.[ch]: new programmer implementation
	* pgm_type.c: add pickit to list
	* avrdude.1: documentation for pickit2
	* doc/avrdude.texi: documentation for pickit2
	* avrdude.conf.in: add pickit2 programmer entry

2012-08-15  Rene Liebscher <R.Liebscher@gmx.de>

	bug #30559 Ft232 bit-bang support, see comment #30
	* ft245r.c: added semaphore workaround for MacOS X,
	            added pthread_testcancel in reader thread
	
	* configure.ac: added check for TYPE_232H in libftdi (not in libftdi < 0.20)
	* avrftdi.c: do not use TYPE_232H if not declared

2012-08-13  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi.c: fixes pin_limit for different FTDI devices (there was a mixup
	between 2232C and 2232H)

2012-07-29  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi.c: bugfixes (synchronisation) and maintenance (paged programming,
	nicer output, separation of parameter checking and actual code)

2012-07-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_memtype): return MTYPE_FLASH rather than
	MTYPE_SPM for non-Xmega flash regions

2012-07-20 Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrpart.c, avrpart.h: adds avr_pin_name()

2012-07-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: check for libelf.h also in libelf/
	* fileio.c: include <libelf/libelf.h> if configure found this
	to be the case

2012-06-13  Rene Liebscher <R.Liebscher@gmx.de>
